--- a/index.html
+++ b/index.html
@@ -71,6 +71,29 @@ body{
 	font-weight: bold;
 	font-size: 110px;
 }
+@media only screen and (max-width: 480px) {
+.word h1 {
+	font-weight: bold;
+	font-size: 70px;
+	line-height: 57px;
+}
+.word {
+	right: unset;
+	margin: unset;
+	width: unset;
+	top: 40%;
+}
+.main li img {
+	height: 22px;
+}
+.logos {
+	right: unset;
+	margin: unset;
+}
+.main li {
+	display: block;
+}
+}
 </style>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
